containers/config/leaderboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: leaderboard
  labels:
    app: leaderboard
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8081
    nodePort: 30002
  selector:
    app: leaderboard
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: leaderboard
  labels:
    app: leaderboard
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: leaderboard
    spec:
      containers:
        - name: leaderboard
          # image: us.icr.io/kubespace/node-leaderboard
          image: us.icr.io/fitlead/node-leaderboard
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
