containers/config/shop.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shop
  labels:
    app: shop
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8082
    #nodePort: 30001
  selector:
    app: shop
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shop
  labels:
    app: shop
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
        - name: shop
          image: us.icr.io/fitlead/node-shop
          # image: us.icr.io/kubespace/node-shop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
