containers/config/users.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app: users
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    #nodePort: 30000
  selector:
    app: users
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          # image: us.icr.io/kubespace/node-users
          image: us.icr.io/fitlead/node-users
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
